# dl-from-scratch

./: README.md  pyproject.toml
src/dl_from_scratch/: __init__.py
src/nn_cnn/common/: functions.py
src/nn_cnn/dataset/: mnist.py
src/nn_cnn/nn/: forwardprop_practice.py  mnist_show.py  nn_mnist_batch.py  note.md  relu.py  sig_step_compare.py  sigmoid.py  softmax.py  step_function.py
src/nn_cnn/perceptron/: and_gate.py  nand_gate.py  or_gate.py  xor_gate.py
src/nn_cnn/python_intro/: note.md
