[project]
name = "dl-from-scratch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shisotem", email = "129283841+shisotem@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dl_from_scratch"]
